// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`embeds > should include alt-text embed if present 1`] = `
[
  {
    "author": {
      "name": "Comic Title",
    },
    "image": {
      "url": "https://localhost/image.png",
    },
    "title": "Comic 1",
    "url": "https://localhost/comic",
  },
  {
    "description": "Alt text: ||Alt text.||",
  },
]
`;

exports[`embeds > should not include alt-text embed if missing 1`] = `
[
  {
    "author": {
      "name": "Comic Title",
    },
    "image": {
      "url": "https://localhost/image.png",
    },
    "title": "Comic 1",
    "url": "https://localhost/comic",
  },
]
`;
